--- a/core/templates/admin/base.html
+++ b/core/templates/admin/base.html
@@ -12,7 +12,7 @@
 <script>
   setTimeout(function () {
     var script = document.createElement('script')
-    script.src = "{% static '/core/js/custom.js' %}"
+    script.src = "{% static 'core/js/custom.js' %}"
     script.type = 'text/javascript'
     document.getElementsByTagName('head')[0].appendChild(script)
   }, 100);
