fix (admin/tagify): update to use with jazzmin

--- a/core/static/core/css/_admin.sass
+++ b/core/static/core/css/_admin.sass
@@ -10,3 +10,12 @@
     align-items: center
     justify-content: center
     flex-direction: column
+
+// Customize tagify
+.tagify__input
+    margin: 0 !important
+    padding: 0 !important
+    padding-left: 10px !important
+
+tag.tagify__input
+    margin-block: 3px !important
