--- a/core/static/core/css/custom.css
+++ b/core/static/core/css/custom.css
@@ -7,4 +7,14 @@
   align-items: center;
   justify-content: center;
   flex-direction: column;
+}
+
+.tagify__input {
+  margin: 0 !important;
+  padding: 0 !important;
+  padding-left: 10px !important;
+}
+
+tag.tagify__input {
+  margin-block: 3px !important;
 }/*# sourceMappingURL=custom.css.map */
