style (admin/sidebar): hide user profile

--- a/core/static/core/css/_admin.sass
+++ b/core/static/core/css/_admin.sass
@@ -19,3 +19,8 @@
 
 tag.tagify__input
     margin-block: 3px !important
+
+// Remove avatar in sidebar
+.user-panel.d-flex
+    display: none !important
+    border: 2px solid red
