style (admin/aside): logo over page title in each page

--- a/core/static/core/css/_admin.sass
+++ b/core/static/core/css/_admin.sass
@@ -5,7 +5,7 @@
         width: 200px
 
 // Fix logo in sidebar
-.brand-link.active
+aside > a.brand-link
     display: flex
     align-items: center
     justify-content: center
