feat (admin/markdown): replace code block with underline

--- a/core/static/core/css/_admin.sass
+++ b/core/static/core/css/_admin.sass
@@ -31,3 +31,13 @@ tag.tagify__input
 
         > div
             max-width: 100% !important
+
+// Customize markdown
+.CodeMirror 
+
+    // Underline to code blocks
+    pre.CodeMirror-line .cm-comment
+        text-decoration: underline
+
+    .cm-formatting.cm-formatting-code.cm-comment
+        display: none
